--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -89,7 +89,7 @@ padding-top: 10px;
   </header>
 
   <div>
-    <p>Employment Insurance (EI) is a service that touches almost 2 million Canadians every year*. Certain <abbr title="Employment Insurance">EI</abbr> benefits are designed specifically for Canadians caring for a critically ill or injured family member, or for someone needing end of life care.</p>
+    <p>Employment Insurance (EI) is a service that touches almost 2 million Canadians every year. Certain <abbr title="Employment Insurance">EI</abbr> benefits are designed specifically for Canadians caring for a critically ill or injured family member, or for someone needing end of life care.</p>
 
 		<p>The Digital Transformation Office, Service Canada, and Employment and Social Development Canada collaborated to make it easier to find, understand and access those <abbr title="Employment Insurance">EI</abbr> benefits. </p>
 
@@ -122,7 +122,7 @@ padding-top: 10px;
 
 <ul>
 	<li>if they needed Records of Employment to complete their application (37% success rate)</li>
-	<li>how to transition from one caregiving benefit to another, if the state of health of the person being cared for changed(0% success rate)</li>
+	<li>how to transition from one caregiving benefit to another, if the state of health of the person being cared for changed (0% success rate)</li>
 	<li>that they could apply for family caregiving benefits without actually being a relative of the critically ill patient (39% success rate)</li>
 </ul>
 
