--- a/research-recherche/prochesaidants-resume-recherche.html
+++ b/research-recherche/prochesaidants-resume-recherche.html
@@ -123,7 +123,7 @@ padding-top: 10px;
 <p>Certaines tâches étaient particulièrement difficiles pour les Canadiens invités à participer aux essais initiaux. Parmi ces tâches, on demandait aux participants s’ils pouvaient trouver et comprendre :</p>
 
 <ul>
-	<li>s’ils avaient besoin de relevés d’emploi pour remplir leur demande (taux de réussite de 37 %</li>
+	<li>s’ils avaient besoin de relevés d’emploi pour remplir leur demande (taux de réussite de 37 %)</li>
 	<li>comment faire la transition d’une prestation pour proches aidants à une autre, si l’état de santé de la personne soignée change (taux de réussite de 0 %)</li>
 	<li>qu’ils pouvaient demander des prestations pour proches aidants de la famille sans être un parent du patient gravement malade (taux de réussite de 39 %)</li>
 </ul>
