add EN footnote

--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -89,7 +89,7 @@ padding-top: 10px;
   </header>
 
   <div>
-    <p>Employment Insurance (EI) is a service that touches almost 2 million Canadians every year. Certain <abbr title="Employment Insurance">EI</abbr> benefits are designed specifically for Canadians caring for a critically ill or injured family member, or for someone needing end of life care.</p>
+    <p>Employment Insurance (EI) is a service that touches almost 2 million Canadians every year<sup id="fn1-0-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup>. Certain <abbr title="Employment Insurance">EI</abbr> benefits are designed specifically for Canadians caring for a critically ill or injured family member, or for someone needing end of life care.</p>
 
 		<p>The Digital Transformation Office, Service Canada, and Employment and Social Development Canada collaborated to make it easier to find, understand and access those <abbr title="Employment Insurance">EI</abbr> benefits. </p>
 
@@ -259,8 +259,24 @@ Detailed description
 
 </ul>
 
+ <aside class="wb-fnote" role="note">
+<dl>
 
+							 <dt>Footnote 1</dt>
+							 <dd id="fn1">
+									 <p>1.8 million in 2016/17 according to ESDC’s monitoring report: <a href="1.8 million in 2016/17 according to ESDC’s monitoring report: https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/reports/monitoring2017/chapter2/ei-overview.html"> https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/reports/monitoring2017/chapter2/ei-overview.html</a></p>
+									 <p class="fn-rtn">
+											 <a href="#fn1-0-rf"><span class="wb-inv">Return to footnote</span>1<span class="wb-inv"> Referrer</span></a>
+									 </p>
+							 </dd>
+
+
+
+			 </dl>
+</aside>
 </div>
+
+
 
   </div>
 <div class="clearfix"></div>
