--- a/research-recherche/prochesaidants-resume-recherche.html
+++ b/research-recherche/prochesaidants-resume-recherche.html
@@ -91,7 +91,7 @@ padding-top: 10px;
   </header>
 
   <div>
-    <p>L’assurance-emploi (AE) est un service qui touche près de 2 millions de Canadiens chaque année. Certaines prestations d’<abbr title="assurance-emploi">AE</abbr> visent particulièrement les Canadiens qui prennent soin d’un membre de leur famille qui est gravement malade ou blessé, ou les personnes ayant besoin de soins de fin de vie.</p>
+    <p>L’assurance-emploi (AE) est un service qui touche près de 2 millions de Canadiens chaque année <sup id="fn1-0-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Note de bas de page </span>1</a></sup>. Certaines prestations d’<abbr title="assurance-emploi">AE</abbr> visent particulièrement les Canadiens qui prennent soin d’un membre de leur famille qui est gravement malade ou blessé, ou les personnes ayant besoin de soins de fin de vie.</p>
 
 		<p>Le Bureau de la transformation numérique, Service Canada ainsi qu’Emploi et Développement social Canada ont collaboré pour faciliter la recherche, la compréhension et l’accès aux prestations d’<abbr title="assurance-emploi">AE</abbr>. </p>
 
@@ -263,6 +263,21 @@ Description détaillée
 
 </ul>
 
+<aside class="wb-fnote" role="note">
+<dl>
+
+							<dt>Notes de bas de page 1</dt>
+							<dd id="fn1">
+									<p>1,8 million en 2016-2017 selon le rapport de surveillance d’EDSC :<a href="https://www.canada.ca/fr/emploi-developpement-social/programmes/assurance-emploi/ae-liste/rapports/controle2017/chapitre2/apercu-ae.html"> https://www.canada.ca/fr/emploi-developpement-social/programmes/assurance-emploi/ae-liste/rapports/controle2017/chapitre2/apercu-ae.html  </a></p>
+									<p class="fn-rtn">
+											<a href="#fn1-0-rf"><span class="wb-inv">Retour à la référence de la note de bas de page</span>1<span class="wb-inv"> Référent</span></a>
+									</p>
+							</dd>
+
+
+
+			</dl>
+</aside>
 
 </div>
 
