--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -466,7 +466,7 @@
 
 																												<br>
 
-<!--			<p><a href="#">Apprenez la façon dont nous l’avons fait.</a></p> -->
+<p><a href="../research-recherche/prochesaidants-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p>
 
 																												</div>
 																												</section>
