--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -468,7 +468,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 																												<br>
 
-<!--			<p><a href="#">Learn how we did it.</a></p> -->
+p><a href="../research-recherche/cargiving-research-summary.html">Learn how we did it.</a></p>
 
 																												</div>
 																												</section>
