--- a/research-recherche/recalls-research-summary.html
+++ b/research-recherche/recalls-research-summary.html
@@ -189,7 +189,31 @@ padding-top: 10px;
 
 <br>
 <figure>
-<img class="img-responsive" alt="Photo of project team members using flip charts and sticky notes to collaborate and change job stories into task scenarios" src="../images/recalls-rappels/beforeafter-epipen.jpg"/>
+<img class="img-responsive" alt="Image of two phones showing the search page, labelled 'Before' and 'After'." src="../images/recalls-rappels/beforeafter-search.jpg"/>
+<br>
+<figcaption><small>Search page at baseline and after redesign for validation </small></figcaption>
+<br>
+</figure>
+
+<details>
+<summary>
+Detailed description
+</summary>
+<br>
+<p>Image of two phones, labelled "Before" and "After".</p>
+
+<p>The first phone shows how the original Recalls content displayed on mobile. .</p>
+
+<p>The second phone shows how the redesigned prototype text is much shorter and has more white space. You can see that 3 bullets immediately tell you the product, the issue and what to do. An arrow points to the text with the annotation "Answers not information - Highlight what to do".</p>
+
+</details>
+
+<br>
+<br>
+
+<figure>
+<img class="img-responsive" alt="Image of two phones showing EpiPen information update page, labelled 'Before' and 'After'."
+ src="../images/recalls-rappels/beforeafter-epipen.jpg"/>
 <br>
 <figcaption><small>EpiPen shortage information update at baseline and after redesign for validation </small></figcaption>
 <br>
