--- a/research-recherche/rappels-resume-recherche.html
+++ b/research-recherche/rappels-resume-recherche.html
@@ -323,7 +323,7 @@ Detailed description
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "le juillet 23 2018",
+		dateModified: "le octobre 18 2018",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
