--- a/research-recherche/rappels-resume-recherche.html
+++ b/research-recherche/rappels-resume-recherche.html
@@ -109,7 +109,7 @@ padding-top: 10px;
 <ul>
 
  <li class="li-sp"><b>Je l’ai déjà acheté </b>: « <b>Lorsque j</b>’entends parler d’un rappel pour un produit que j’ai peut-être acheté, <b>je veux</b> savoir si c’est celui que j’ai <b>afin de pouvoir</b> décider de retourner ou de jeter celui que j’ai acheté. »</li>
- <li class="li-sp"><b>Pour décider de l’acheter  </b>: « <b>Lorsque j</b>essaie d’acheter un produit x, <b>je veux</b> savoir s’il y a des rappels <b>afin de pouvoir</b> décider de l’acheter ou non. »</li>
+ <li class="li-sp"><b>Pour décider de l’acheter  </b>: « <b>Lorsque j'</b>essaie d’acheter un produit x, <b>je veux</b> savoir s’il y a des rappels <b>afin de pouvoir</b> décider de l’acheter ou non. »</li>
   <li class="li-sp"><b>Pour éviter de l’acheter  </b>: « <b>Lorsque je</b> suis responsable d’autres personnes ou de ma santé, <b>je veux</b> connaître à l’avance les risques <b>afin de pouvoir</b> éviter de tomber malade et afin d’avertir les autres. »
 </li>
 
