update to timeline

--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -479,17 +479,17 @@
 
 <h4>Ministères partenaire</h4>
 
-						<p>Santé Canada; Agence canadienne d'inspection des aliments; Transports Canada</p>
+						<p>Santé Canada, l’Agence canadienne d’inspection des aliments, Transports Canada et Environnement Canada</p>
 
 		<h4>Objectif</h4>
 
-			<p>#</p>
+			<p>Permettre aux Canadiens de trouver et de comprendre plus facilement les rappels et les avis de sécurité pour les aliments, les produits de santé, les véhicules et les sièges d’auto.</p>
 
 
 			<h4>Pourquoi ces tâches sont-elles importantes?</h4>
 
 						<ul>
-				<li class="custli">#</li>
+				<li class="custli">Chaque année, des milliers de rappels et d’avis de sécurité sont publiés. Lorsque les Canadiens peuvent trouver et comprendre ces renseignements, ils sont davantage en sécurité.</li>
 				</ul>
 			<br>
 
@@ -528,7 +528,7 @@
 
 																												<br>
 
-<!--			<p><a href="#">Apprenez la façon dont nous l’avons fait.</a></p> -->
+	<p><a href="../research-recherche/rappels-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p> 
 
 																												</div>
 																												</section>
