--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -491,6 +491,22 @@
 								</div>
 
 											</div>
+
+
+											<div class="details-custom soon" >
+															<div class="borderless">  <h3 class="timeline-title-soon">Trouver un emploi (en cours)</h3> <div></div>
+
+											</div>
+
+														</div>
+
+
+												<div class="details-custom soon" >
+																<div class="borderless">  <h3 class="timeline-title-soon">Se préparer à passer l’examen de citoyenneté (en cours)</h3> <div></div>
+
+												</div>
+
+															</div>
 									</li>
 
 
