--- a/pages/projectoverview-update.html
+++ b/pages/projectoverview-update.html
@@ -480,17 +480,17 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 									<h4>Partner departments</h4>
 
-									<p>Health Canada; Canadian Food Inspection Agency; Transport Canada</p>
+									<p>Health Canada, the Canadian Food and Safety Inspection Agency, Transport Canada, and Environment Canada</p>
 
 			<h4>Objective</h4>
 
-			<p>Minimize the risks to Canadians from food, health products, vehicles and car seats.</p>
+			<p>Make it easier for Canadians to find and understand both recalls and safety alerts for food, health products, vehicles and car seats.</p>
 
 
 			<h4>Why this work matters</h4>
 
 			<ul>
-			<li class="custli">There are thousands of recalls every year</li>
+			<li class="custli">There are thousands of recalls and safety alerts every year. When Canadians can find and understand this information, they are safer.</li>
 			</ul>
 			<br>
 
@@ -530,7 +530,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 																												<br>
 
-<!--			<p><a href="#">Learn how we did it.</a></p> -->
+<p><a href="../research-recherche/recalls-research-summary.html">Learn how we did it.</a></p>
 
 																												</div>
 																												</section>
