--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -490,6 +490,25 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 								</div>
 
 											</div>
+
+
+											<div class="details-custom soon" >
+				                      <div class="borderless">  <h3 class="timeline-title-soon">Find a job (in progress)</h3> <div></div>
+
+											</div>
+
+				                    </div>
+
+
+												<div class="details-custom soon" >
+																<div class="borderless">  <h3 class="timeline-title-soon">Prepare for the citizenship test (in progress)</h3> <div></div>
+
+												</div>
+
+															</div>
+													</li>
+
+
 									</li>
 
 
