--- a/pages/apercu-projet-update.html
+++ b/pages/apercu-projet-update.html
@@ -479,7 +479,7 @@
 
 <h4>Ministères partenaire</h4>
 
-						<p>Santé Canada, l’Agence canadienne d’inspection des aliments, Transports Canada et Environnement Canada</p>
+						<p>Santé Canada, Agence canadienne d’inspection des aliments, Transports Canada et Environnement Canada</p>
 
 		<h4>Objectif</h4>
 
@@ -528,7 +528,7 @@
 
 																												<br>
 
-	<p><a href="../research-recherche/rappels-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p> 
+	<p><a href="../research-recherche/rappels-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p>
 
 																												</div>
 																												</section>
