update FR table

--- a/research-recherche/rappels-resume-recherche.html
+++ b/research-recherche/rappels-resume-recherche.html
@@ -238,36 +238,44 @@ Detailed description
 				<th scope="col">Base</th>
 				<th scope="col">Validation</th>
 
-			</tr></thead><tbody><tr><td>1. Retenues sur la paie : retenues sur la paie par Interac</td>
-				<td  >59 %</td>
-				<td>73 %</td>
-			</tr><tr><td>2. <abbr title="taxe sur les produits et services">TPS</abbr> : date de la facture</td>
-				<td  >41 %</td>
-				<td>78 %</td>
-			</tr><tr><td>3. Retenues sur la paie : erreur de versement – amende</td>
-				<td  >14 %</td>
-				<td>42 %</td>
-			</tr><tr><td>4. <abbr title="taxe sur les produits et services">TPS</abbr> : lieu d’approvisionnement</td>
-				<td  >27 %</td>
-				<td>67 %</td>
-			</tr><tr><td>5. Retenues sur la paie : confirmer la réception du chèque</td>
-				<td  >29 %</td>
-				<td>83 %</td>
-			</tr><tr><td>6. <abbr title="taxe sur les produits et services">TPS</abbr> : versements échelonnés </td>
-				<td  >24 %</td>
-				<td>60 %</td>
-			</tr><tr><td>7. Retenues sur la paie : quand effectuer un versement </td>
-				<td  >76 %</td>
-				<td>96 %</td>
-			</tr><tr><td>8. Retenues sur la paie : cotisations maximales au <abbr title="Régime de pensions du Canada">RPC</abbr> </td>
-				<td  >80 %</td>
-				<td>83 %</td>
-			</tr><tr><td>9. <abbr title="taxe sur les produits et services">TPS</abbr> : date du versement (premier) </td>
-				<td  >82 %</td>
-				<td>74 %</td>
-			</tr><tr><td>10. Retenues sur la paie : aucun versement </td>
-				<td  >47 %</td>
+			</tr></thead><tbody><tr><td>1. Google rappels des aliments</td>
+				<td  >88 %</td>
 				<td>100 %</td>
+			</tr><tr><td>2. Œufs allergènes alimentaires</td>
+				<td  >63 %</td>
+				<td>94 %</td>
+			</tr><tr><td>3. Recherche rôti de bœuf</td>
+				<td  >29 %</td>
+				<td>82 %</td>
+			</tr><tr><td>4. Rappel connexe de Buckley’s</td>
+				<td  >44 %</td>
+				<td>100 %</td>
+			</tr><tr><td>5. Rappel de siège de voiture Britax</td>
+				<td  >50 %</td>
+				<td>67 %</td>
+			</tr><tr><td>6. Pénurie d’Epipen</td>
+				<td  >71 %</td>
+				<td>88 %</td>
+			</tr><tr><td>7. Recherche de véhicule Honda Pilot VUS 2003  </td>
+				<td  >76 %</td>
+				<td>94 %</td>
+			</tr><tr><td>8. Stella Artois </td>
+				<td  >65 %</td>
+				<td>75 %</td>
+			</tr><tr><td>9. Jouets pour enfants rappelés </td>
+				<td  >88 %</td>
+				<td>100 %</td>
+			</tr><tr><td>10. Fin du rappel de laitue </td>
+				<td  >31 %</td>
+				<td>63 %</td>
+			</tr>
+			<tr><td>11. Arachides allergènes alimentaires </td>
+				<td  >31 %</td>
+				<td>94 %</td>
+			</tr>
+			<tr><td>10. Chaise haute convertible Skip Tuo </td>
+				<td  >25 %</td>
+				<td>94 %</td>
 			</tr>
 			</tbody>
 		</table>
