update content - hidden links to research

--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -476,13 +476,67 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 </details>
 
 
-							<div class="details-custom soon" >
-                      <div class="borderless">  <h3 class="timeline-title-soon">Recalls and safety alerts (in progress)</h3> <div></div>
+<details >
+								<summary class="borderless">  <h3 class="timeline-title">Recalls and safety alerts</h3> <div class="summary-custom"><div></summary>
 
-							</div>
+									<h4>Partner departments</h4>
 
-                    </div>
+									<p>Health Canada, Canadian Food and Safety Inspection Agency, Transport Canada, and Environment Canada</p>
 
+			<h4>Objective</h4>
+
+			<p>Make it easier for Canadians to find and understand both recalls and safety alerts for food, health products, vehicles and car seats.</p>
+
+
+			<h4>Why this work matters</h4>
+
+			<ul>
+			<li class="custli">There are thousands of recalls and safety alerts every year. When Canadians can find and understand this information, they are safer.</li>
+			</ul>
+			<br>
+
+															<div class="table-bravo">
+																												<table class="table table-slim">
+
+																												<thead><tr style=""><th scope="col">Task success before</th>
+																												<th scope="col" >Task success after</th>
+																												<th scope="col">Improvement to task success</th>
+
+																											</tr></thead><tbody><tr>
+																												<td class="table-smnum">52%</td>
+																												<td class="table-smnum">86%</td>
+																												<td><p class="improvement">+34<span class="pts">%pts</span></p></td>
+																												</tr></tbody></table>
+
+
+							<h4 style="margin-top: 0px;">Task scenarios tested and improved</h4>
+
+																												<div>
+
+																		<ul class="custul">
+																				<li class="custli">Your son is allergic to eggs. He had a reaction tonight. Find out if each of these foods might have caused his allergic reaction.</li>
+																				<li class="custli">You saw something on Facebook about roast beef recalls. When you check in your fridge, you see you have a sandwich with this tag on it. Are you risking illness if you eat it, or not?</li>
+																				<li class="custli">While on Facebook, you clicked on this recall. Looking at your bottle, you see it is not the same. Yours is called Original Mixture, with serial number 6F99322. Has it been recalled too?</li>
+																				<li class="custli">A friend gave you a 2014 Britax B-SAFE 35 baby car seat. Is there anything you or your friend should do before you use it?</li>
+																				<li class="custli">Your EpiPen is going to expire soon. You heard there are production problems. Find out what you should do if you have an allergic reaction before you get a new one.</li>
+																				<li class="custli">You are looking at buying a 2003 Honda Pilot SUV. Find out if there are any recalls for it before you buy it. (Then) Rate your confidence that you found all of the recalls for this vehicle. </li>
+																				<li class="custli">You bought Stella Artois beer. You heard that there is a problem with this brand. Your bottles have this label. Are they affected?</li>
+																				<li class="custli">There are recalls right now for children's toys that people might have bought. Find and provide the name of the recalled toy that is of the most concern to you. </li>
+																				<li class="custli">You want to buy lettuce. You remember seeing something about lettuce that made people ill. Which type(s) of lettuce should you avoid buying today? </li>
+																				<li class="custli">Your daughter is allergic to peanuts. She had a reaction this afternoon at home. She ate only these two foods. Check if either was the cause. [(Neither are listed) When they've reached a conclusion: What would you do?] </li>
+																				<li class="custli">You are looking at this high chair on eBay. Check if there are any problems with this model.</li>
+
+
+																								</ul>
+
+																												<br>
+
+<!-- <p><a href="../research-recherche/recalls-research-summary.html">Learn how we did it.</a></p> -->
+
+																												</div>
+																												</section>
+																												</div>
+</details>
 
 								<div class="details-custom soon" >
 												<div class="borderless">  <h3 class="timeline-title-soon">Business account maintenance (in progress)</h3> <div></div>
