finish research summary

--- a/research-recherche/rappels-resume-recherche.html
+++ b/research-recherche/rappels-resume-recherche.html
@@ -117,9 +117,9 @@ padding-top: 10px;
 
 <br>
 <figure>
-<img class="img-responsive" alt="Photo of job stories being developed." src="../images/recalls-rappels/job-stories.jpg" longdes="Flip chart pages have titles for each job story. Project team members have put up coloured sticky notes beneath each title with ideas for possible stories, following the 'When I...I want to...so I can...' format"/>
+<img class="img-responsive" alt="Photo illustrant l’élaboration d’histoires liées à des emplois." src="../images/recalls-rappels/job-stories.jpg" longdes="Chacune de ces histoires est précédée d’un titre sur les pages du tableau de papier. Les membres de l’équipe de projet ont appliqué sous chaque titre un feuillet autoadhésif coloré où sont notées des idées d’histoires possibles, sous la forme « Si je [...] je le veux [...] je le peux [...] »"/>
 </figure>
-<figcaption>Job stories (en anglais)</figcaption>
+<figcaption>L’élaboration d’histoires liées à des emplois (en anglais)</figcaption>
 <br>
 
 
@@ -181,22 +181,22 @@ padding-top: 10px;
 
 <br>
 <figure>
-<img class="img-responsive" alt="Image of two phones showing the search page, labelled 'Before' and 'After'." src="../images/recalls-rappels/beforeafter-search-FR.jpg"/>
+<img class="img-responsive" alt="Images figurant sur deux téléphones, étiquetés « Avant » et « Après »" src="../images/recalls-rappels/beforeafter-search-FR.jpg"/>
 <br>
-<figcaption><small>Search page at baseline and after redesign for validation </small></figcaption>
 <br>
 </figure>
 
+
 <details>
 <summary>
-Detailed description
+Description détaillée
 </summary>
 <br>
-<p>Image of two phones, labelled "Before" and "After".</p>
+<p>Images figurant sur deux téléphones, étiquetés « Avant » et « Après »</p>
 
-<p>The first phone shows how the original Recalls content displayed on mobile. .</p>
+<p>Le premier téléphone montre comment le contenu initial des rappels s’est affiché sur l’appareil mobile.</p>
 
-<p>The second phone shows how the redesigned prototype text is much shorter and has more white space. You can see that 3 bullets immediately tell you the product, the issue and what to do. An arrow points to the text with the annotation "Answers not information - Highlight what to do".</p>
+<p> Le deuxième montre comment le contenu du prototype de nouvelle conception s’affiche sur l’appareil mobile. Une flèche indique les filtres placés près du haut de l’écran dans le prototype, avec la note « Algorithme de recherche optimisé afin de montrer moins de résultats grâce aux filtres qui fonctionnent en concordance avec la recherche ».</p>
 
 </details>
 
