--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -531,7 +531,7 @@
 
 																												<br>
 
-	<!-- <p><a href="../research-recherche/rappels-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p> -->
+	 <p><a href="../research-recherche/rappels-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p>
 
 																												</div>
 																												</section>
