--- a/pages/Canada.ca-miseajour-Autorisationetrenonciation.html
+++ b/pages/Canada.ca-miseajour-Autorisationetrenonciation.html
@@ -33,7 +33,7 @@
 		<!-- Write closure template -->
 		<main role="main" property="mainContentOfPage" class="container">
 <h1>Autorisation et renonciation</h1>
-<h2>Canada.ca vers l'avenir – Mise à jour de l'automne</h2>
+<h2>Mise à jour de l'automne de Canada.ca>
 <h3>Mardi le 5 novembre 2018, Ottawa</h3>
 	<p>
  Moi j’accorde à Sa Majesté la Reine du Canada, qui est représentée par le président du Secrétariat du Conseil du Trésor du Canada (SCT), le droit d’utiliser, de modifier, d’adapter, d’exposer, de publier, de transmettre, de reproduire et de créer des oeuvres dérivées à partir de photographies, de bandes vidéo et/ou audio, de ressemblances, tout ouvrage, les oeuvres d’art, mon profil et/ou mon témoignage dans du matériel élaboré par le SCT ou en son nom, d’en faire la distribution ou d’utiliser mon nom, ce qui comprend, mais sans s’y limiter, des publications actuelles et futures, les sites Web, des enregistrements vidéo et/ou audio visant à promulguer et à appuyer la mission du SCT pour utilisation interne ou diffusion publique.
