--- a/pages/wm-sondage-fr.html
+++ b/pages/wm-sondage-fr.html
@@ -1,3 +1,21 @@
+Skip to content
+ 
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ @singhav8r Sign out
+16
+10 9 canada-ca/canada-ca.github.io
+ Code  Issues 15  Pull requests 1  Projects 2  Wiki  Insights
+canada-ca.github.io/pages/wm-sondage-fr.html
+dd24700  just now
+@singhav8r singhav8r Update wm-sondage-fr.html
+@singhav8r @patlaj
+     
+102 lines (93 sloc)  4.1 KB
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
@@ -47,21 +65,19 @@
 <main role="main" property="mainContentOfPage" class="container">
 <section>
 	<h1 property="name" id="wb-cont" class="h2">Government of Canada web management questionnaire</h1>
-	<!-- <p>We want to know what will be most helpful to you in your work producing digital content for the Government of Canada. Answer this quick survey to let us know.</p> -->
-	<p>The Treasury Board of Canada Secretariat (TBS) and Service Canada (SC) are seeking input from departments to assess current and future needs in web management with the goal of delivering, monitoring and continuously improving services to Canadians.</p>
+	<p>Le Secrétariat du Conseil du Trésor du Canada (SCT) et Service Canada (SC) sollicitent l’avis des ministères pour évaluer les besoins actuels et futurs en matière de gestion Web dans le but d’offrir, de surveiller et d’améliorer continuellement les services aux Canadiens.</p>
 
-	<p>This questionnaire will provide: </p>
+	<p>Ce questionnaire fournira : </p>
 	<ul>
-		<li>a point-in-time snapshot of Government of Canada web publishing technology and development capacity</li>
-	<li>anticipated departmental web publishing and search needs</li>
+		<li>une compréhension actuelle de la technologie de publication Web et de la capacité de développement du gouvernement du Canada</li>
+	<li>les besoins ministériels en matière de publication et de recherche sur le Web</li>
 	</ul>
 
-	<h2>Deadline</h2>
-	<p>Please complete this survey on or before <strong>Friday, November 9, 2018</strong>.</p>
-	<h2>Need help?</h2>
+	<h2>Date limite</h2>
+	<p>Veuillez répondre au sondage au plus tard le vendredi 9 novembre 2018.</strong>.</p>
+	<h2>Besoin d'aide?</h2>
 
-	<p>Contact <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> with any issues or questions you may have regarding this survey.</p>
-
+	<p>Communiquez avec <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> pour toute question ou tout problème que vous pourriez avoir au sujet de ce sondage.</p>
 	<h2 style="margin-bottom:-1em">Questionnaire</h2>
 
 <section>
@@ -99,3 +115,16 @@
 		</script>
 	</body>
 </html>
+© 2018 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Press h to open a hovercard with more details.
