--- a/pages/wm-sondage-fr.html
+++ b/pages/wm-sondage-fr.html
@@ -74,7 +74,7 @@ dd24700  just now
 	</ul>
 
 	<h2>Date limite</h2>
-	<p>Veuillez répondre au sondage au plus tard le vendredi 9 novembre 2018.</strong>.</p>
+	<p>Veuillez répondre au sondage au plus tard <strong>le vendredi 9 novembre 2018.</strong>.</p>
 	<h2>Besoin d'aide?</h2>
 
 	<p>Communiquez avec <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> pour toute question ou tout problème que vous pourriez avoir au sujet de ce sondage.</p>
