--- a/pages/wm-sondage-fr.html
+++ b/pages/wm-sondage-fr.html
@@ -1,21 +1,3 @@
-Skip to content
- 
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- @singhav8r Sign out
-16
-10 9 canada-ca/canada-ca.github.io
- Code  Issues 15  Pull requests 1  Projects 2  Wiki  Insights
-canada-ca.github.io/pages/wm-sondage-fr.html
-dd24700  just now
-@singhav8r singhav8r Update wm-sondage-fr.html
-@singhav8r @patlaj
-     
-102 lines (93 sloc)  4.1 KB
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
@@ -74,7 +56,7 @@ dd24700  just now
 	</ul>
 
 	<h2>Date limite</h2>
-	<p>Veuillez répondre au sondage au plus tard <strong>le vendredi 9 novembre 2018.</strong>.</p>
+	<p>Veuillez répondre au sondage au plus tard le vendredi 9 novembre 2018.</strong>.</p>
 	<h2>Besoin d'aide?</h2>
 
 	<p>Communiquez avec <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> pour toute question ou tout problème que vous pourriez avoir au sujet de ce sondage.</p>
@@ -115,16 +97,3 @@ dd24700  just now
 		</script>
 	</body>
 </html>
-© 2018 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Press h to open a hovercard with more details.
