--- a/pages/wm-sondage-fr.html
+++ b/pages/wm-sondage-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Government of Canada web management questionnaire - Canada.ca</title>
+		<title>Questionnaire de gestion Web du gouvernement du Canada - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -46,7 +46,7 @@
 </style>
 <main role="main" property="mainContentOfPage" class="container">
 <section>
-	<h1 property="name" id="wb-cont" class="h2">Government of Canada web management questionnaire</h1>
+	<h1 property="name" id="wb-cont" class="h2">Questionnaire de gestion Web du gouvernement du Canada</h1>
 	<p>Le Secrétariat du Conseil du Trésor du Canada (SCT) et Service Canada (SC) sollicitent l’avis des ministères pour évaluer les besoins actuels et futurs en matière de gestion Web dans le but d’offrir, de surveiller et d’améliorer continuellement les services aux Canadiens.</p>
 
 	<p>Ce questionnaire fournira : </p>
