--- a/pages/nov-sondage-fr.html
+++ b/pages/nov-sondage-fr.html
@@ -45,7 +45,7 @@
 }
 </style>
 <main role="main" property="mainContentOfPage" class="container">
-
+<h1>Mise à jour d'automne de Canada.ca : Sondage</h1>
 <section>
 <script type="text/javascript" >document.write('<script src="http' + ( ("https:" == document.location.protocol) ? "s" : "") + '://ca.surveygizmo.com/s3/50038533/83bbc98a836d?__output=embedjs&__ref=' + escape(document.location.origin + document.location.pathname) + '" type="text/javascript" ></scr' + 'ipt>');</script><noscript><a href="https://ca.surveygizmo.com/s3/50038533/83bbc98a836d?jsfallback=true">Sondage</a></noscript><style>.sg-survey{display:none; }</style
 
