--- a/pages/nov-sondage-fr.html
+++ b/pages/nov-sondage-fr.html
@@ -27,7 +27,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "en",
-					href: "nov-sondage-fr.html",
+					href: "nov-survey-en.html",
 					text: "English"
 				}],
 				breadcrumbs: [{
