Update and rename wm-sondage-fr.html to wm-questionnaire-fr.html

--- a/pages/wm-questionnaire-fr.html
+++ b/pages/wm-questionnaire-fr.html
@@ -27,7 +27,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "en",
-					href: "wm-survey-en.html",
+					href: "wm-questionnaire-en.html",
 					text: "English"
 				}],
 				breadcrumbs: [{
