--- a/pages/wm-questionnaire-en.html
+++ b/pages/wm-questionnaire-en.html
@@ -27,7 +27,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "fr",
-					href: "wm-sondage-fr.html",
+					href: "wm-questionnaire-fr.html",
 					text: "Français"
 				}],
 				breadcrumbs: [{
