--- a/pages/wm-questionnaire-fr.html
+++ b/pages/wm-questionnaire-fr.html
@@ -54,6 +54,8 @@
 		<li>une compréhension actuelle de la technologie de publication Web et de la capacité de développement du gouvernement du Canada</li>
 	<li>les besoins ministériels en matière de publication et de recherche sur le Web</li>
 	</ul>
+	
+	<p>Votre participation est volontaire.</p>
 
 	<h2>Date limite</h2>
 	<p>Veuillez répondre au sondage au plus tard le vendredi 23 novembre 2018.</strong>.</p>
