--- a/pages/wm-questionnaire-en.html
+++ b/pages/wm-questionnaire-en.html
@@ -63,8 +63,12 @@
 <h2>Need help?</h2>
 
 <p>Contact <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> with any issues or questions you may have regarding this survey.</p>
-
-<h2 style="margin-bottom:-1em">Questionnaire</h2>
+<h2>Important notes</h2>
+<ul>
+	<li>Please do not include any sensitive, confidential, or personal information about yourself or any other individual in your responses.</li>
+	<li>Please note this questionnaire is being administered using the third-party online service <a href="https://www.surveygizmo.com/privacy/">SurveyGizmo</a>, and is subject to their privacy policies.</li>
+	</ul>
+	<h2 style="margin-bottom:-1em">Questionnaire</h2>
 <section>
 <script type="text/javascript" >document.write('<script src="http' + ( ("https:" == document.location.protocol) ? "s" : "") + '://ca.surveygizmo.com/s3/50033039/Web-Management-Survey-MWS-and-WET?__output=embedjs&__ref=' + escape(document.location.origin + document.location.pathname) + '" type="text/javascript" ></scr' + 'ipt>');</script><noscript><a href="https://ca.surveygizmo.com/s3/50033039/Web-Management-Survey-MWS-and-WET??jsfallback=true">Take the survey now</a></noscript><style>.sg-survey{display:none; }</style>
 </section>
