--- a/pages/wm-questionnaire-fr.html
+++ b/pages/wm-questionnaire-fr.html
@@ -60,7 +60,14 @@
 	<h2>Besoin d'aide?</h2>
 
 	<p>Communiquez avec <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> pour toute question ou tout problème que vous pourriez avoir au sujet de ce sondage.</p>
-	<h2 style="margin-bottom:-1em">Questionnaire</h2>
+	
+		<h2>Remarques importantes</h2>
+<ul>
+	<li>N'incluez aucune information sensible, confidentielle ou personnelle vous concernant ou concernant toute autre personne dans vos réponses. </ li>
+<li> Veuillez noter que ce questionnaire est administré à l'aide du service en ligne tiers <a href="https://www.surveygizmo.com/privacy/"> SurveyGizmo </a> et est soumis à leurs règles de confidentialité. </ li>		
+		</ul>		
+		
+		<h2 style="margin-bottom:-1em">Questionnaire</h2>
 
 <section>
 <script type="text/javascript" >document.write('<script src="http' + ( ("https:" == document.location.protocol) ? "s" : "") + '://ca.surveygizmo.com/s3/50033039/questionnaire-de-gestion-Web?__output=embedjs&__ref=' + escape(document.location.origin + document.location.pathname) + '" type="text/javascript" ></scr' + 'ipt>');</script><noscript><a href="https://try.surveygizmo.com/assessment">SurveyGizmo</a> - employee assessments aid in professional development and employee satisfaction. <a href="https://ca.surveygizmo.com/s3/50033936/CanadacaverslavenirMiseajourdelautomne?jsfallback=true">Please take my survey now</a></noscript><style>.sg-survey{display:none; }</style>
