finish redirects for live blog

--- a/blog-redirects/research-recherche/prochesaidants-resume-recherche.html
+++ b/blog-redirects/research-recherche/prochesaidants-resume-recherche.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=http://blogue.canada.ca/resumes-recherche/prochesaidants-resume-recherche.html">
+<link rel="canonical" href="http://blogue.canada.ca/resumes-recherche/prochesaidants-resume-recherche.html" />
+<title>Résumé du projet : Prestations d’assurance-emploi pour proches aidants - Canada.ca</title>
+</head>
+<body>
+</body>
+</html>
+
+<!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html class="no-js" lang="fr" dir="ltr"><!--<![endif]-->
 	<head>
