--- a/blog-redirects/pages/starting-a-business-decisions.html
+++ b/blog-redirects/pages/starting-a-business-decisions.html
@@ -1,91 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
-	<head>
-		<meta charset="utf-8">
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Starting a business decisions</title>
-		<meta content="width=device-width,initial-scale=1" name="viewport">
-		<!-- Meta data-->
-		<!-- Load closure template scripts -->
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js"></script>
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-en.js"></script>
-
-		<!-- Write closure template -->
-		<script type="text/javascript">
-			document.write(wet.builder.refTop({
-			}));
-		</script>
-		<!-- Analytics -->
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-		  ga('create', 'UA-105628416-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
-	</head>
-	<body vocab="http://schema.org/" typeof="WebPage">
-		<div id="def-top">
-		</div>
-		<!-- Write closure template -->
-		<script type="text/javascript">
-			var defTop = document.getElementById("def-top");
-			defTop.outerHTML = wet.builder.top({
-				lngLinks: [{
-					lang: "fr",
-					href: "decisions-demarrer-entreprise.html",
-					text: "Français"
-				}],
-				breadcrumbs: [{
-					title: "Home",
-					href: "https://www.canada.ca/en.html"
-				},{
-					title: "About Canada.ca",
-					href: "https://www.canada.ca/en/government/about.html"
-				}],
-				search: true,
-				siteMenu: true,
-				showPreContent: false
-			});
-</script>
-<main role="main" property="mainContentOfPage" class="container">
-
-<h1>Starting a business decisions</h1>
-
-  <img class="img-responsive" alt="Flow of decisions made when setting up a business." src="../images/start-lancer/Starting_a_business_decisions_Nov2016_grey_1803x1230.png" longdesc="Consult the accessible interactive version.">
-	<br>
-  <p>Consult the <a href="https://ca.surveygizmo.com/s3/50019452/Starting-a-business-decisions">accessible interactive version</a>.</p>
-
-<div id="def-preFooter">
-</div>
-<!-- Write closure template -->
-<script type="text/javascript">
-	var defPreFooter = document.getElementById("def-preFooter");
-	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "2017-12-07",
-		showPostContent: true,
-		showFeedback: true,
-		showShare: true
-	});
-</script>
-		</main>
-		<div id="def-footer">
-
-		</div>
-		<!-- Write closure template -->
-		<script type="text/javascript">
-			var defFooter = document.getElementById("def-footer");
-			defFooter.outerHTML = wet.builder.footer({
-				showFooter: true,
-				showFeatures: false
-			});
-		</script>
-		<!-- Write closure template -->
-		<script type="text/javascript">
-			document.write(wet.builder.refFooter({
-			}));
-		</script>
-	</body>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://blog.canada.ca/pages/starting-a-business-decisions.html">
+<link rel="canonical" href="https://blog.canada.ca/pages/starting-a-business-decisions.html" />
+<title>Starting a business decisions - Canada.ca</title>
+</head>
+<body>
+</body>
 </html>
